--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-GMAIL_APP_CODE="tsobecziqfmczlef"
-="toreky.zsombor@gmail.com"
+GMAIL_APP_CODE=tsobecziqfmczlef
+GMAIL_SENDER_ADDRESS=toreky.zsombor@gmail.com
